--- a/Front_End/AngularApp/src/app/User/listar/listar.component.html
+++ b/Front_End/AngularApp/src/app/User/listar/listar.component.html
@@ -1,1 +1,35 @@
-<p>listar works!</p>
+<div class="container">
+    <table class="table table-hover">
+        <thead>
+            <tr>
+                <th>Nombre</th>
+                <th>Ap</th>
+                <th>Am</th>
+                <th>Email</th>
+                <th>Teléfono</th>
+                <th>Calle</th>
+                <th>Número</th>
+                <th>Municipio</th>
+                <th>Estado</th>
+                <th>Acción</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let user of users ">
+                <td>{{user.nombre}}</td>
+                <td>{{user.ap}}</td>
+                <td>{{user.am}}</td>
+                <td>{{user.email}}</td>
+                <td>{{user.telefono}}</td>
+                <td>{{user.calle}}</td>
+                <td>{{user.numero}}</td>
+                <td>{{user.municipio}}</td>
+                <td>{{user.estado}}</td>
+                <td>
+                    <button class="btn btn-warning">Editar</button>
+                    <button style="margin-left:5px;" class="btn btn-danger">Delete</button>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
