--- a/Front_End/AngularApp/src/app/User/listar/listar.component.html
+++ b/Front_End/AngularApp/src/app/User/listar/listar.component.html
@@ -2,6 +2,7 @@
     <table class="table table-hover">
         <thead>
             <tr>
+                <th>id</th>
                 <th>Nombre</th>
                 <th>Ap</th>
                 <th>Am</th>
@@ -16,6 +17,7 @@
         </thead>
         <tbody>
             <tr *ngFor="let user of users ">
+                <td>{{user.id_user}}</td>
                 <td>{{user.nombre}}</td>
                 <td>{{user.ap}}</td>
                 <td>{{user.am}}</td>
@@ -26,8 +28,8 @@
                 <td>{{user.municipio}}</td>
                 <td>{{user.estado}}</td>
                 <td>
-                    <button class="btn btn-warning">Editar</button>
-                    <button style="margin-left:5px;" class="btn btn-danger">Delete</button>
+                    <button (click)="editar(user)" class="btn btn-warning">Editar</button>
+                    <button (click)="delete(user)" style="margin-left:5px;" class="btn btn-danger">Delete</button>
                 </td>
             </tr>
         </tbody>
